[gd_scene load_steps=22 format=3 uid="uid://besxjh8nxywkx"]

[ext_resource type="PackedScene" uid="uid://1wh7nxamopc5" path="res://import/eiden/eiden.glb" id="1_bvsux"]
[ext_resource type="ArrayMesh" uid="uid://5r2472e3ksei" path="res://import/eiden/eiden_sword_1_mesh.tres" id="2_n3fbm"]
[ext_resource type="Script" path="res://tmp/eiden_v4.gd" id="2_re4jj"]
[ext_resource type="Script" path="res://addons/bpb_ragdoll/bpb_ragdoll.gd" id="4_tialu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_pmxa8"]
radius = 0.05
height = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_o6egr"]
radius = 0.05
height = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e7umy"]
radius = 0.05
height = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d2hul"]
radius = 0.05
height = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qjpsr"]
radius = 0.289913
height = 0.579825

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7tfuk"]
radius = 0.1
height = 0.236659

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lvc26"]
radius = 0.1
height = 0.24396

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0jk5o"]
radius = 0.1
height = 0.236659

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_yh5sh"]
radius = 0.1
height = 0.24396

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_huutj"]
radius = 0.1
height = 0.211185

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_indaq"]
radius = 0.0788262
height = 0.157652

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ah7on"]
radius = 0.1
height = 0.211185

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ikrtq"]
radius = 0.0788262
height = 0.157652

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0im2m"]
radius = 0.05
height = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3pxsy"]
radius = 0.05
height = 0.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g71o6"]
radius = 0.0432953
height = 0.0865907

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ja2xd"]
radius = 0.0432953
height = 0.0865907

[node name="eiden" instance=ExtResource("1_bvsux")]
script = ExtResource("2_re4jj")

[node name="GeneralSkeleton" parent="Armature_male" index="0"]
bones/1/position = Vector3(-3.39857e-15, 0.478307, -2.85093e-08)
bones/1/rotation = Quaternion(3.00927e-36, 7.52316e-37, 0, 1)
bones/2/rotation = Quaternion(-7.10543e-15, 3.72528e-09, 1, -4.44089e-16)
bones/2/scale = Vector3(1, 1, 1.00001)
bones/3/rotation = Quaternion(-8.88178e-16, 1, 0, 8.52096e-15)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-3.85198e-08, 0.895341, -0.445381, -1.91617e-08)
bones/4/scale = Vector3(1, 1.00001, 1)
bones/5/rotation = Quaternion(-2.51215e-15, 1, 0, 2.51215e-15)
bones/6/rotation = Quaternion(2.52435e-29, 6.31089e-30, 4.23516e-22, 1)
bones/7/rotation = Quaternion(3.00927e-36, -8.47033e-22, 2.52435e-29, 1)
bones/13/rotation = Quaternion(0.637229, 0.353825, 0.412769, -0.546232)
bones/14/rotation = Quaternion(0.181303, 0.980812, 0.0704852, 0.0130292)
bones/15/rotation = Quaternion(-3.16101e-08, -0.707107, 3.16101e-08, 0.707107)
bones/16/rotation = Quaternion(2.59024e-09, 0.707107, 2.59024e-09, 0.707107)
bones/18/rotation = Quaternion(0.637229, -0.353825, -0.412769, -0.546232)
bones/19/rotation = Quaternion(-0.181303, 0.980812, 0.0704852, -0.0130292)
bones/20/rotation = Quaternion(-3.16101e-08, 0.707107, -3.16101e-08, 0.707107)
bones/21/rotation = Quaternion(2.59024e-09, -0.707107, -2.59024e-09, 0.707107)
bones/22/rotation = Quaternion(-2.98023e-08, -8.9407e-08, 2.98023e-08, 1)
bones/27/rotation = Quaternion(-7.10543e-15, 3.72528e-09, 1, -4.44089e-16)
bones/27/scale = Vector3(1, 1, 1.00001)
bones/28/rotation = Quaternion(-8.88178e-16, 1, 0, 8.52096e-15)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(-1.09329e-07, 0.89597, -0.444114, 1.36696e-07)
bones/29/scale = Vector3(1, 1.00001, 1)
bones/30/rotation = Quaternion(2.51215e-15, 1, 0, 2.51215e-15)
bones/31/position = Vector3(0.123135, 0.226245, 0.271683)
bones/32/position = Vector3(0.123135, 0.0693557, -1.80102e-08)
bones/32/rotation = Quaternion(-2.98023e-08, 0, -3.55271e-15, 1)
bones/33/position = Vector3(-0.123135, 0.0693557, -1.80102e-08)
bones/33/rotation = Quaternion(0, 2.84217e-14, -1.42109e-14, 1)
bones/34/position = Vector3(-0.123135, 0.226245, 0.271683)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Armature_male/GeneralSkeleton" index="1"]
transform = Transform3D(-0.0594367, -0.998227, -0.00325346, 0.0546518, 2.35339e-07, -0.998506, 0.996735, -0.0595258, 0.0545549, -0.803284, 0.950315, -0.0448901)
bone_name = "RightHolder"
bone_idx = 22

[node name="EidenSword1Mesh" type="MeshInstance3D" parent="Armature_male/GeneralSkeleton/BoneAttachment3D" index="0"]
transform = Transform3D(4.37114e-08, -3.82137e-15, -1, -8.74228e-08, -1, 0, -1, 8.74228e-08, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_n3fbm")
skeleton = NodePath("../../../..")

[node name="BPBRagdoll" type="Node3D" parent="." index="2"]
script = ExtResource("4_tialu")
ragdoll_active = false
skeleton_path = NodePath("../Armature_male/GeneralSkeleton")

[node name="Hips" type="RigidBody3D" parent="BPBRagdoll" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.80934e-15, 0.545911, -3.1955e-08)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSHips" type="CollisionShape3D" parent="BPBRagdoll/Hips" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_pmxa8")

[node name="TransformHips" type="Marker3D" parent="BPBRagdoll/Hips" index="1"]
transform = Transform3D(1, 0, 1.50463e-36, 0, 1, -6.01853e-36, -1.50463e-36, 6.01853e-36, 1, 4.10762e-16, -0.0578097, 3.44572e-09)

[node name="Spine" type="RigidBody3D" parent="BPBRagdoll" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.78629e-15, 0.683405, -4.01503e-08)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSSpine" type="CollisionShape3D" parent="BPBRagdoll/Spine" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_o6egr")

[node name="TransformSpine" type="Marker3D" parent="BPBRagdoll/Spine" index="1"]
transform = Transform3D(1, -8.47033e-22, 1.26218e-29, 8.47033e-22, 1, -5.04871e-29, -1.26218e-29, 5.04871e-29, 1, 5.6619e-16, -0.0796841, 4.74954e-09)

[node name="Chest" type="RigidBody3D" parent="BPBRagdoll" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.80948e-15, 0.827406, -4.87334e-08)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSChest" type="CollisionShape3D" parent="BPBRagdoll/Chest" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_e7umy")

[node name="TransformChest" type="Marker3D" parent="BPBRagdoll/Chest" index="1"]
transform = Transform3D(1, -8.47033e-22, -1.69407e-21, 8.47033e-22, 1, -5.04871e-29, 1.69407e-21, 5.04871e-29, 1, 4.57001e-16, -0.0643172, 3.8336e-09)

[node name="UpperChest" type="RigidBody3D" parent="BPBRagdoll" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.87125e-15, 0.976837, -5.76402e-08)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSUpperChest" type="CollisionShape3D" parent="BPBRagdoll/UpperChest" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_d2hul")

[node name="TransformUpperChest" type="Marker3D" parent="BPBRagdoll/UpperChest" index="1"]
transform = Transform3D(1, -8.47033e-22, -1.69407e-21, 8.47033e-22, 1, -5.04871e-29, 1.69407e-21, 5.04871e-29, 1, 6.04771e-16, -0.0851138, 5.07319e-09)

[node name="Head" type="RigidBody3D" parent="BPBRagdoll" index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.53598e-15, 1.35186, -7.99936e-08)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSHead" type="CollisionShape3D" parent="BPBRagdoll/Head" index="0"]
shape = SubResource("CapsuleShape3D_qjpsr")

[node name="TransformHead" type="Marker3D" parent="BPBRagdoll/Head" index="1"]
transform = Transform3D(1, -8.47033e-22, -1.69407e-21, 8.47033e-22, 1, -5.04871e-29, 1.69407e-21, 5.04871e-29, 1, 2.05996e-15, -0.289913, 1.72802e-08)

[node name="LeftUpperArm" type="RigidBody3D" parent="BPBRagdoll" index="5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.319607, 0.957271, -0.0519336)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSLeftUpperArm" type="CollisionShape3D" parent="BPBRagdoll/LeftUpperArm" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_7tfuk")

[node name="TransformLeftUpperArm" type="Marker3D" parent="BPBRagdoll/LeftUpperArm" index="1"]
transform = Transform3D(-0.0594366, 0.998227, 0.00325331, -0.0546518, 8.9407e-08, -0.998506, -0.996735, -0.0595257, 0.054555, -0.11812, -5.96046e-08, 0.00704367)

[node name="LeftLowerArm" type="RigidBody3D" parent="BPBRagdoll" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.559503, 0.957179, -0.0519337)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSLeftLowerArm" type="CollisionShape3D" parent="BPBRagdoll/LeftLowerArm" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_lvc26")

[node name="TransformLeftLowerArm" type="Marker3D" parent="BPBRagdoll/LeftLowerArm" index="1"]
transform = Transform3D(0.00325341, 0.998227, 0.0594366, -0.998506, 1.7868e-07, 0.0546519, 0.0545551, -0.0595257, 0.996735, -0.121776, 9.197e-05, -0.00704363)

[node name="RightUpperArm" type="RigidBody3D" parent="BPBRagdoll" index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.319607, 0.957271, -0.0519336)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSRightUpperArm" type="CollisionShape3D" parent="BPBRagdoll/RightUpperArm" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_0jk5o")

[node name="TransformRightUpperArm" type="Marker3D" parent="BPBRagdoll/RightUpperArm" index="1"]
transform = Transform3D(-0.0594366, -0.998227, -0.00325331, 0.0546518, 8.9407e-08, -0.998506, 0.996735, -0.0595257, 0.054555, 0.11812, -5.96046e-08, 0.00704367)

[node name="RightLowerArm" type="RigidBody3D" parent="BPBRagdoll" index="8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.559503, 0.957179, -0.0519337)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSRightLowerArm" type="CollisionShape3D" parent="BPBRagdoll/RightLowerArm" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_yh5sh")

[node name="TransformRightLowerArm" type="Marker3D" parent="BPBRagdoll/RightLowerArm" index="1"]
transform = Transform3D(0.00325341, -0.998227, -0.0594366, 0.998506, 1.7868e-07, 0.0546519, -0.0545551, -0.0595257, 0.996735, 0.121776, 9.197e-05, -0.00704363)

[node name="LeftUpperLeg" type="RigidBody3D" parent="BPBRagdoll" index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.123135, 0.331553, 0.00774691)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSLeftUpperLeg" type="CollisionShape3D" parent="BPBRagdoll/LeftUpperLeg" index="0"]
shape = SubResource("CapsuleShape3D_huutj")

[node name="TransformLeftUpperLeg" type="Marker3D" parent="BPBRagdoll/LeftUpperLeg" index="1"]
transform = Transform3D(-1, 8.88178e-16, -1.42111e-14, -8.88178e-16, -1, 7.45067e-09, -1.42109e-14, 7.45057e-09, 1.00001, 0, 0.105308, -0.00774695)

[node name="LeftLowerLeg" type="RigidBody3D" parent="BPBRagdoll" index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.123135, 0.1478, 0.00774696)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSLeftLowerLeg" type="CollisionShape3D" parent="BPBRagdoll/LeftLowerLeg" index="0"]
shape = SubResource("CapsuleShape3D_indaq")

[node name="TransformLeftLowerLeg" type="Marker3D" parent="BPBRagdoll/LeftLowerLeg" index="1"]
transform = Transform3D(1, 2.66453e-15, -2.83087e-15, 2.66453e-15, -1, -7.45067e-09, -2.83131e-15, 7.45057e-09, -1.00001, 0, 0.0784446, 0.00774689)

[node name="RightUpperLeg" type="RigidBody3D" parent="BPBRagdoll" index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.123135, 0.331553, 0.00774691)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSRightUpperLeg" type="CollisionShape3D" parent="BPBRagdoll/RightUpperLeg" index="0"]
shape = SubResource("CapsuleShape3D_ah7on")

[node name="TransformRightUpperLeg" type="Marker3D" parent="BPBRagdoll/RightUpperLeg" index="1"]
transform = Transform3D(-1, 8.88178e-16, -1.42111e-14, -8.88178e-16, -1, 7.45067e-09, -1.42109e-14, 7.45057e-09, 1.00001, 0, 0.105308, -0.00774695)

[node name="RightLowerLeg" type="RigidBody3D" parent="BPBRagdoll" index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.123135, 0.1478, 0.00774696)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSRightLowerLeg" type="CollisionShape3D" parent="BPBRagdoll/RightLowerLeg" index="0"]
shape = SubResource("CapsuleShape3D_ikrtq")

[node name="TransformRightLowerLeg" type="Marker3D" parent="BPBRagdoll/RightLowerLeg" index="1"]
transform = Transform3D(1, 2.66453e-15, -2.83087e-15, 2.66453e-15, -1, -7.45067e-09, -2.83131e-15, 7.45057e-09, -1.00001, 0, 0.0784446, 0.00774689)

[node name="RightHand" type="RigidBody3D" parent="BPBRagdoll" index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.731483, 0.957179, -0.0519337)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSRightHand" type="CollisionShape3D" parent="BPBRagdoll/RightHand" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_0im2m")

[node name="TransformRightHand" type="Marker3D" parent="BPBRagdoll/RightHand" index="1"]
transform = Transform3D(-0.0594366, -0.998227, -0.00325341, 0.0546519, 1.79081e-07, -0.998506, 0.996735, -0.0595257, 0.0545551, 0.0502036, -9.197e-05, 0.00704362)

[node name="LeftHand" type="RigidBody3D" parent="BPBRagdoll" index="14"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.731483, 0.957179, -0.0519337)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSLeftHand" type="CollisionShape3D" parent="BPBRagdoll/LeftHand" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_3pxsy")

[node name="TransformLeftHand" type="Marker3D" parent="BPBRagdoll/LeftHand" index="1"]
transform = Transform3D(-0.0594366, 0.998227, 0.00325341, -0.0546519, 1.79081e-07, -0.998506, -0.996735, -0.0595257, 0.0545551, -0.0502036, -9.197e-05, 0.00704362)

[node name="RightFoot" type="RigidBody3D" parent="BPBRagdoll" index="15"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.123135, 0.0431397, 0.0777511)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSRightFoot" type="CollisionShape3D" parent="BPBRagdoll/RightFoot" index="0"]
shape = SubResource("CapsuleShape3D_g71o6")

[node name="TransformRightFoot" type="Marker3D" parent="BPBRagdoll/RightFoot" index="1"]
transform = Transform3D(-1, -7.44934e-08, 3.4206e-07, 3.17328e-07, -0.605529, 0.795827, 1.47845e-07, 0.795842, 0.605534, 0, 0.0262162, -0.0777511)

[node name="LeftFoot" type="RigidBody3D" parent="BPBRagdoll" index="16"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.123135, 0.0432372, 0.0778251)
collision_layer = 256
collision_mask = 263
mass = 2.0
freeze = true

[node name="CSLeftFoot" type="CollisionShape3D" parent="BPBRagdoll/LeftFoot" index="0"]
shape = SubResource("CapsuleShape3D_ja2xd")

[node name="TransformLeftFoot" type="Marker3D" parent="BPBRagdoll/LeftFoot" index="1"]
transform = Transform3D(-1, -8.60457e-08, -6.71881e-13, 5.19081e-08, -0.603276, 0.797536, -6.86254e-08, 0.797551, 0.603281, 7.45058e-09, 0.0261186, -0.0778251)

[node name="JSpine" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="17"]
transform = Transform3D(1, -8.47033e-22, 1.26218e-29, 8.47033e-22, 1, -5.04871e-29, -1.26218e-29, 5.04871e-29, 1, -4.2201e-15, 0.603721, -3.54007e-08)
node_a = NodePath("../Hips")
node_b = NodePath("../Spine")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.349066

[node name="JChest" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="18"]
transform = Transform3D(1, -8.47033e-22, -1.69407e-21, 8.47033e-22, 1, -5.04871e-29, 1.69407e-21, 5.04871e-29, 1, -5.35248e-15, 0.763089, -4.48998e-08)
node_a = NodePath("../Spine")
node_b = NodePath("../Chest")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.349066

[node name="JUpperChest" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="19"]
transform = Transform3D(1, -8.47033e-22, -1.69407e-21, 8.47033e-22, 1, -5.04871e-29, 1.69407e-21, 5.04871e-29, 1, -6.26648e-15, 0.891723, -5.2567e-08)
node_a = NodePath("../Chest")
node_b = NodePath("../UpperChest")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.349066

[node name="JHead" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="20"]
transform = Transform3D(1, -8.47033e-22, -1.69407e-21, 8.47033e-22, 1, -5.04871e-29, 1.69407e-21, 5.04871e-29, 1, -7.47602e-15, 1.06195, -6.27134e-08)
node_a = NodePath("../UpperChest")
node_b = NodePath("../Head")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.349066

[node name="JLeftUpperArm" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="21"]
transform = Transform3D(-0.0594366, 0.998227, 0.00325331, -0.0546518, 8.9407e-08, -0.998506, -0.996735, -0.0595257, 0.054555, 0.201487, 0.957271, -0.04489)
node_a = NodePath("../UpperChest")
node_b = NodePath("../LeftUpperArm")
angular_limit_x/lower_angle = -1.39626
angular_limit_y/upper_angle = 0.349066
angular_limit_y/lower_angle = -0.349066
angular_limit_z/upper_angle = 1.5708
angular_limit_z/lower_angle = -0.523599

[node name="JLeftLowerArm" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="22"]
transform = Transform3D(0.00325341, 0.998227, 0.0594366, -0.998506, 1.7868e-07, 0.0546519, 0.0545551, -0.0595257, 0.996735, 0.437727, 0.957271, -0.0589773)
node_a = NodePath("../LeftUpperArm")
node_b = NodePath("../LeftLowerArm")
angular_limit_x/lower_angle = -2.0944

[node name="JLeftHand" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="23"]
transform = Transform3D(-0.0594366, 0.998227, 0.00325341, -0.0546519, 1.79081e-07, -0.998506, -0.996735, -0.0595257, 0.0545551, 0.681279, 0.957087, -0.0448901)
node_a = NodePath("../LeftLowerArm")
node_b = NodePath("../LeftHand")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_y/upper_angle = 0.349066
angular_limit_y/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.349066
angular_limit_z/lower_angle = -0.349066

[node name="JRightUpperArm" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="24"]
transform = Transform3D(-0.0594366, -0.998227, -0.00325331, 0.0546518, 8.9407e-08, -0.998506, 0.996735, -0.0595257, 0.054555, -0.201487, 0.957271, -0.04489)
node_a = NodePath("../UpperChest")
node_b = NodePath("../RightUpperArm")
angular_limit_x/upper_angle = 1.39626
angular_limit_x/lower_angle = -1.39626
angular_limit_y/upper_angle = 0.349066
angular_limit_y/lower_angle = -0.349066
angular_limit_z/upper_angle = 1.5708
angular_limit_z/lower_angle = -0.523599

[node name="JRightLowerArm" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="25"]
transform = Transform3D(0.00325341, -0.998227, -0.0594366, 0.998506, 1.7868e-07, 0.0546519, -0.0545551, -0.0595257, 0.996735, -0.437727, 0.957271, -0.0589773)
node_a = NodePath("../RightUpperArm")
node_b = NodePath("../RightLowerArm")
angular_limit_x/lower_angle = -2.0944

[node name="JRightHand" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="26"]
transform = Transform3D(-0.0594366, -0.998227, -0.00325341, 0.0546519, 1.79081e-07, -0.998506, 0.996735, -0.0595257, 0.0545551, -0.681279, 0.957087, -0.0448901)
node_a = NodePath("../RightLowerArm")
node_b = NodePath("../RightHand")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_y/upper_angle = 0.349066
angular_limit_y/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.349066
angular_limit_z/lower_angle = -0.349066

[node name="JLeftUpperLeg" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="27"]
transform = Transform3D(-1, 8.88178e-16, -1.42111e-14, -8.88178e-16, -1, 7.45067e-09, -1.42109e-14, 7.45057e-09, 1.00001, 0.123135, 0.436861, -4.34654e-08)
node_a = NodePath("../Hips")
node_b = NodePath("../LeftUpperLeg")
angular_limit_x/upper_angle = 0.523599
angular_limit_x/lower_angle = -1.5708
angular_limit_y/upper_angle = 0.785398

[node name="JLeftLowerLeg" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="28"]
transform = Transform3D(1, 2.66453e-15, -2.83087e-15, 2.66453e-15, -1, -7.45067e-09, -2.83131e-15, 7.45057e-09, -1.00001, 0.123135, 0.226245, 0.0154939)
node_a = NodePath("../LeftUpperLeg")
node_b = NodePath("../LeftLowerLeg")
angular_limit_x/lower_angle = -1.5708

[node name="JLeftFoot" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="29"]
transform = Transform3D(-1, -8.60457e-08, -6.71881e-13, 5.19081e-08, -0.603276, 0.797536, -6.86254e-08, 0.797551, 0.603281, 0.123135, 0.0693558, 7.35745e-08)
node_a = NodePath("../LeftLowerLeg")
node_b = NodePath("../LeftFoot")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.174533
angular_limit_z/lower_angle = -0.174533

[node name="JRightUpperLeg" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="30"]
transform = Transform3D(-1, 8.88178e-16, -1.42111e-14, -8.88178e-16, -1, 7.45067e-09, -1.42109e-14, 7.45057e-09, 1.00001, -0.123135, 0.436861, -4.34653e-08)
node_a = NodePath("../Hips")
node_b = NodePath("../RightUpperLeg")
angular_limit_x/upper_angle = 0.523599
angular_limit_x/lower_angle = -1.5708
angular_limit_y/upper_angle = 0.785398

[node name="JRightLowerLeg" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="31"]
transform = Transform3D(1, 2.66453e-15, -2.83087e-15, 2.66453e-15, -1, -7.45067e-09, -2.83131e-15, 7.45057e-09, -1.00001, -0.123135, 0.226245, 0.0154939)
node_a = NodePath("../RightUpperLeg")
node_b = NodePath("../RightLowerLeg")
angular_limit_x/lower_angle = -1.5708

[node name="JRightFoot" type="Generic6DOFJoint3D" parent="BPBRagdoll" index="32"]
transform = Transform3D(-1, -7.44934e-08, 3.4206e-07, 3.17328e-07, -0.605529, 0.795827, 1.47845e-07, 0.795842, 0.605534, -0.123135, 0.0693559, 7.26432e-08)
node_a = NodePath("../RightLowerLeg")
node_b = NodePath("../RightFoot")
angular_limit_x/upper_angle = 0.349066
angular_limit_x/lower_angle = -0.349066
angular_limit_z/upper_angle = 0.174533
angular_limit_z/lower_angle = -0.174533
